--- a/style/style.css
+++ b/style/style.css
@@ -1179,6 +1179,9 @@ input[type=text]{
         width: 350px;
         height: 44px;
     }
+    header .burger{
+        margin-top: 6%;
+    }
 }
 
 @media(max-width: 420px){
@@ -1193,16 +1196,19 @@ input[type=text]{
         height: auto;
     }
     .container8 .business .form .btn a{
-        padding: 14px 136 14px 138px;
+        padding: 14px 136px 14px 145px;
     }
     .container8 .business .form .btn{
         margin-left: -1px;
-        margin-top: 2px;
+        margin-top: 3px;
     }
     
     input[type=text]{
         width: 350px;
         height: 44px;
+    }
+    header .burger{
+        margin-top: 6%;
     }
 }
 
