--- a/style/style.css
+++ b/style/style.css
@@ -1181,16 +1181,18 @@ input[type=text]{
         height: auto;
     }
     .container8 .business .form .btn a{
-        padding: 14px 133px 14px 136px;
+        padding: 14px 134px 14px 136px;
     }
     .container8 .business .form .btn{
         margin-left: -2px;
-        margin-top: 2px;
+        margin-top: 1px;
     }
     
     input[type=text]{
         width: 350px;
         height: 44px;
+        padding-bottom: 0px;
+        margin-bottom: 0px;
     }
     header .burger{
         margin-top: 4%;
